--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "eslint",
     "deploy": "serverless",
     "export": "next build && next export",
-    "generate:types": "graphql-codegen"
+    "generate:types": "graphql-codegen",
+    "dev:server:posts": "ts-node -O '{\"module\":\"commonjs\"}' servers/posts/index.ts",
+    "dev:server:users": "ts-node -O '{\"module\":\"commonjs\"}' servers/users/index.ts"
   },
   "dependencies": {
     "@apollo/client": "^3.3.7",
+    "@apollo/federation": "^0.21.0",
+    "@apollo/gateway": "^0.22.0",
     "@sls-next/serverless-component": "^1.18.0",
     "apollo-server": "^2.19.2",
     "apollo-server-micro": "^2.19.2",
